--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -19,6 +19,7 @@
 
     .camden-title {
       position: absolute; 
+      transform: rotate(-90deg); /* Rotate the title text back */
       /* Add any other styling for your titles here */
     }
 
@@ -109,7 +110,7 @@
       dragging: false,         
       scrollWheelZoom: false,
       doubleClickZoom: false
-    }).setView([51.541120, -0.145793], 20); // Increased zoom level 
+    }).setView([51.541120, -0.145793], 19); // Increased zoom level 
 
     // Define the bounds (Oval Road Bridge to Kentish Town Bridge) - Adjust coordinates
     const southWest = L.latLng(51.540350, -0.149730);  
