--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -8,19 +8,16 @@
   <style>
     /* CSS styles.css */
     #map {
-      height: 100vh;
-      transform: rotate(90deg);
-    }
+      background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; /* Optional: center the image */
+  height: 100vh;
+  transform: rotate(90deg);
+}
 
     .leaflet-control-attribution,
     .leaflet-control-zoom {
       display: none;
-    }
-
-    .camden-title {
-      position: absolute;
-      transform: rotate(-90deg); /* Rotate the title text back */
-      /* Add any other styling for your titles here */
     }
 
     /* Lightbox Styles */
@@ -103,16 +100,15 @@
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    // JavaScript (script.js)
     const map = L.map('map', {
       attributionControl: false,
       zoomControl: false,
       dragging: false,
       scrollWheelZoom: false,
-      doubleClickZoom: false
-    }).setView([51.541120, -0.145793], 19); // Increased zoom level
+      doubleClickZoom: false,
+      tap: false
+    }).setView([51.541120, -0.145793], 19);
 
-    // Define the bounds (Oval Road Bridge to Kentish Town Bridge) - Adjust coordinates
     const southWest = L.latLng(51.540350, -0.149730);
     const northEast = L.latLng(51.542182, -0.141018);
     const bounds = L.latLngBounds(southWest, northEast);
@@ -125,41 +121,40 @@
       maxZoom: 19
     }).addTo(map);
 
-    // Add titles with rotated icons
+    // Add invisible markers
     const title1 = L.marker([51.5406, -0.1480], {
       icon: L.divIcon({
-        html: '<div class="camden-title">Title 1</div>'
+        html: '', // No content in the icon
+        iconSize: [0, 0] // Make the icon invisible
       })
-    }).addTo(map)
-      .bindPopup('<a href="#" data-lightbox="lightbox1">Title 1</a>');
+    }).addTo(map);
 
     const title2 = L.marker([51.5409, -0.1468], {
       icon: L.divIcon({
-        html: '<div class="camden-title">Title 2</div>'
+        html: '',
+        iconSize: [0, 0]
       })
-    }).addTo(map)
-      .bindPopup('<a href="#" data-lightbox="lightbox2">Title 2</a>');
+    }).addTo(map);
 
     const title3 = L.marker([51.5409, -0.1461], {
       icon: L.divIcon({
-        html: '<div class="camden-title">Title 3</div>'
+        html: '',
+        iconSize: [0, 0]
       })
-    }).addTo(map)
-      .bindPopup('<a href="#" data-lightbox="lightbox3">Title 3</a>');
+    }).addTo(map);
 
     // Lightbox functionality
     const lightboxes = document.querySelectorAll('.camden-lightbox');
     const closeButtons = document.querySelectorAll('.camden-lightbox-close');
 
-    map.on('popupopen', function(e) {
-      const popup = e.popup;
-      const trigger = popup.getElement().querySelector('a');
-      trigger.addEventListener('click', (event) => {
+    // Event listeners for opening lightboxes directly
+    document.addEventListener('click', (event) => {
+      if (event.target.matches('[data-lightbox]')) {
         event.preventDefault();
-        const lightboxId = trigger.dataset.lightbox;
+        const lightboxId = event.target.dataset.lightbox;
         const lightbox = document.getElementById(lightboxId);
         lightbox.style.display = 'block';
-      });
+      }
     });
 
     closeButtons.forEach(button => {
