--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Camden Canal Walk</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" href="../styles.css"> />
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
     /* CSS styles.css */
     #map {
