--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
     /* CSS styles.css */
-    #map {
-      height: 100vh;
+     #map {
+      height: 100vh; /* Make the map take up full viewport height */
+      width: 100vw;  /* Make the map take up full viewport width */
       transform: rotate(90deg);
     }
 
