--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -85,7 +85,7 @@
   <img src="../media/CamdenBackground.webp" alt="Background Image" class="webp-image">
 
   <div class="top-left-corner">
-    <img src="../media/CamdenCanalWalk.gif" alt="GIF Image">
+    <img src="../media/CamdenCanalWalk.gif" alt="GIF Image" class="camden-gif">
   </div>
 
   <div id="map"></div>
