--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -84,8 +84,12 @@
 
   <img src="../media/CamdenBackground.webp" alt="Background Image" class="webp-image">
 
+  <div class="camden-top-menu-bar">
   <div class="top-left-corner">
     <img src="../media/CamdenCanalWalk.gif" alt="GIF Image" class="camden-gif">
+  </div>
+  
+</div>
   </div>
 
   <div id="map"></div>
