--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -40,7 +40,7 @@ body, html {
   font-size: 1.5em;
   margin-bottom: 20px;
 }.slide-image {
-  max-width: 80%;
+  max-width: 60%;
   height: auto;
   margin-bottom: 20px;
 }.mini-title {
@@ -79,20 +79,23 @@ body, html {
 
   <div class="slide active">
     <div class="slide-content">
-      <h2 class="slide-title">Slide 1 Title</h2>
-      <p class="slide-subtitle">Slide 1 Subtitle</p>
+      <h2 class="slide-title">Graffiti NightLighting</h2>
+      <p class="slide-subtitle">For Regent's Canal</p>
       <img class="slide-image" src="graffitinightlight.webp" alt="Slide 1 Image">
-      <h3 class="mini-title">Mini Title 1</h3>
-      <p class="mini-subtitle">Mini Subtitle 1</p>
+      <h3 class="mini-title">A Responsive and Reflective Solution to Street Lighting</h3>
+      <p class="mini-subtitle">Responsive and Reflective of Camden’s Vibrant Culture</p>
       <div class="info-boxes">
         <div class="info-box">
-          <p>Info Box 1 <i class="fas fa-info-circle"></i></p>
+          <h3>Neon Piping<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Relatively efficient lighting that is easily shapable</p>
         </div>
-        <div class="info-box">
-          <p>Info Box 2 <i class="fas fa-info-circle"></i></p>
+        div class="info-box">
+          <h3>Proximity Sensors<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">To save energy, proximity sensors can be used to gradually light up  and dim sections of the graffiti depending on movement</p>
         </div>
-        <div class="info-box">
-          <p>Info Box 3 <i class="fas fa-info-circle"></i></p>
+        div class="info-box">
+          <h3>Local Collaboration<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Existing graffiti and local graffiti artists can help to inspire the designs of the NightLighting</p>
         </div>
       </div>
     </div>
