--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Full Page Slider</title>
+<title>Camden Canal Walk</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <style>
 body, html {
   margin: 0;
@@ -85,18 +86,18 @@ body, html {
       <h3 class="mini-title">A Responsive and Reflective Solution to Street Lighting</h3>
       <p class="mini-subtitle">Responsive and Reflective of Camden’s Vibrant Culture</p>
       <div class="info-boxes">
-        <div class="info-box">
-          <h3>Neon Piping<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Relatively efficient lighting that is easily shapable</p>
-        </div>
-        div class="info-box">
-          <h3>Proximity Sensors<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">To save energy, proximity sensors can be used to gradually light up  and dim sections of the graffiti depending on movement</p>
-        </div>
-        div class="info-box">
-          <h3>Local Collaboration<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Existing graffiti and local graffiti artists can help to inspire the designs of the NightLighting</p>
-        </div>
+      <div class="info-box">
+  <h3>Neon Piping<i class="fas fa-info-circle"></i></h3>
+  <p class="info-text">Relatively efficient lighting that is easily shapable</p>
+</div>
+<div class="info-box">
+  <h3>Proximity Sensors<i class="fas fa-info-circle"></i></h3>
+  <p class="info-text">To save energy, proximity sensors can be used to gradually light up and dim sections of the graffiti depending on movement</p>
+</div>
+<div class="info-box">
+  <h3>Local Collaboration<i class="fas fa-info-circle"></i></h3>
+  <p class="info-text">Existing graffiti and local graffiti artists can help to inspire the designs of the NightLighting</p>
+</div>
       </div>
     </div>
   </div>
