--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -52,11 +52,19 @@ body, html {
   margin-bottom: 20px;
 }.info-boxes {
   display: flex;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
   justify-content: space-around;
   width: 80%;
 }.info-box {
   text-align: left;
-  width: 30%;
+  width: 100%; /* Full width on smaller screens */
+  margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+.info-box {
+    width: 30%; /* 30% width on larger screens */
+  }
 }.info-box i {
   margin-right: 5px;
 }.arrow {
@@ -86,18 +94,18 @@ body, html {
       <h3 class="mini-title">A Responsive and Reflective Solution to Street Lighting</h3>
       <p class="mini-subtitle">Responsive and Reflective of Camden’s Vibrant Culture</p>
       <div class="info-boxes">
-      <div class="info-box">
-  <h3>Neon Piping<i class="fas fa-info-circle"></i></h3>
-  <p class="info-text">Relatively efficient lighting that is easily shapable</p>
-</div>
-<div class="info-box">
-  <h3>Proximity Sensors<i class="fas fa-info-circle"></i></h3>
-  <p class="info-text">To save energy, proximity sensors can be used to gradually light up and dim sections of the graffiti depending on movement</p>
-</div>
-<div class="info-box">
-  <h3>Local Collaboration<i class="fas fa-info-circle"></i></h3>
-  <p class="info-text">Existing graffiti and local graffiti artists can help to inspire the designs of the NightLighting</p>
-</div>
+        <div class="info-box">
+          <h3>Neon Piping<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Relatively efficient lighting that is easily shapable</p>
+        </div>
+        <div class="info-box">
+          <h3>Proximity Sensors<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">To save energy, proximity sensors can be used to gradually light up and dim sections of the graffiti depending on movement</p>
+        </div>
+        <div class="info-box">
+          <h3>Local Collaboration<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Existing graffiti and local graffiti artists can help to inspire the designs of the NightLighting</p>
+        </div>
       </div>
     </div>
   </div>
@@ -111,13 +119,16 @@ body, html {
       <p class="mini-subtitle">Mini Subtitle 2</p>
       <div class="info-boxes">
         <div class="info-box">
-          <p>Info Box 1 <i class="fas fa-info-circle"></i></p>
+          <h3>Info Box 1<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Some text for info box 1.</p>
         </div>
         <div class="info-box">
-          <p>Info Box 2 <i class="fas fa-info-circle"></i></p>
+          <h3>Info Box 2<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Some text for info box 2.</p>
         </div>
         <div class="info-box">
-          <p>Info Box 3 <i class="fas fa-info-circle"></i></p>
+          <h3>Info Box 3<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Some text for info box 3.</p>
         </div>
       </div>
     </div>
@@ -132,13 +143,16 @@ body, html {
       <p class="mini-subtitle">Mini Subtitle 3</p>
       <div class="info-boxes">
         <div class="info-box">
-          <p>Info Box 1 <i class="fas fa-info-circle"></i></p>
+          <h3>Info Box 1<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Some text for info box 1.</p>
         </div>
         <div class="info-box">
-          <p>Info Box 2 <i class="fas fa-info-circle"></i></p>
+          <h3>Info Box 2<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Some text for info box 2.</p>
         </div>
         <div class="info-box">
-          <p>Info Box 3 <i class="fas fa-info-circle"></i></p>
+          <h3>Info Box 3<i class="fas fa-info-circle"></i></h3>
+          <p class="info-text">Some text for info box 3.</p>
         </div>
       </div>
     </div>
