--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -9,6 +9,7 @@ body, html {
   padding: 0;
   height: 100%;
   font-family: sans-serif;
+  overflow-y: auto; /* Add vertical scroll to the body */
 }.slider-container {
   width: 100%;
   height: 100%;
