--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -1,187 +1,71 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Camden Canal Walk</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-<style>
-body, html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: sans-serif;
-  overflow-y: auto; /* Add vertical scroll to the body */
-}.slider-container {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-}.slide {
-  display: none;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}.slide.active {
-  display: block;
-  opacity: 1;
-}.slide-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  text-align: center;
-  padding: 20px;
-}.slide-title {
-  font-size: 3em;
-  margin-bottom: 10px;
-}.slide-subtitle {
-  font-size: 1.5em;
-  margin-bottom: 20px;
-}.slide-image {
-  max-width: 60%;
-  height: auto;
-  margin-bottom: 20px;
-}.mini-title {
-  font-size: 1.2em;
-  margin-bottom: 5px;
-}.mini-subtitle {
-  font-size: 1em;
-  margin-bottom: 20px;
-}.info-boxes {
-  display: flex;
-  flex-wrap: wrap; /* Allow wrapping for smaller screens */
-  justify-content: space-around;
-  width: 80%;
-}.info-box {
-  text-align: left;
-  width: 100%; /* Full width on smaller screens */
-  margin-bottom: 20px;
-}
-
-@media (min-width: 768px) {
-.info-box {
-    width: 30%; /* 30% width on larger screens */
-  }
-}.info-box i {
-  margin-right: 5px;
-}.arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  padding: 10px 15px;
-  cursor: pointer;
-}.prev {
-  left: 20px;
-}.next {
-  right: 20px;
-}
-</style>
-</head>
-<body>
-
-<div class="slider-container">
-
-  <div class="slide active">
-    <div class="slide-content">
-      <h2 class="slide-title">Graffiti NightLighting</h2>
-      <p class="slide-subtitle">For Regent's Canal</p>
-      <img class="slide-image" src="graffitinightlight.webp" alt="Slide 1 Image">
-      <h3 class="mini-title">A Responsive and Reflective Solution to Street Lighting</h3>
-      <p class="mini-subtitle">Responsive and Reflective of Camden’s Vibrant Culture</p>
-      <div class="info-boxes">
-        <div class="info-box">
-          <h3>Neon Piping<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Relatively efficient lighting that is easily shapable</p>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Graffiti NightLighting for Camden Town</title>
+    <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="styleguide.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="examples-landing">
+      <header class="hero-image">
+        <div class="text-content-title">
+          <h1 class="title">Graffiti NightLighting</h1>
+          <p class="subtitle">For Camden Town</p>
         </div>
-        <div class="info-box">
-          <h3>Proximity Sensors<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">To save energy, proximity sensors can be used to gradually light up and dim sections of the graffiti depending on movement</p>
+      </header>
+      <div class="panel-image-double" aria-hidden="true"></div>
+      <img class="camdenmap" src="camdenmap.webp" alt="Map of Camden Town" />
+      <section class="card-grid-icon">
+        <div class="text-content-heading">
+          <h2 class="text-wrapper">A Responsive and Reflective Solution to Street Lighting</h2>
+          <p class="subheading">Responsive and Reflective of Camden's Vibrant Culture</p>
         </div>
-        <div class="info-box">
-          <h3>Local Collaboration<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Existing graffiti and local graffiti artists can help to inspire the designs of the NightLighting</p>
+        <div class="cards">
+          <article class="card">
+            <img class="info" src="info.svg" alt="" aria-hidden="true" />
+            <div class="body">
+              <div class="text">
+                <h3 class="text-wrapper">Neon Piping</h3>
+                <p class="body-text-for">Relatively efficient lighting that is easily shapable</p>
+              </div>
+            </div>
+          </article>
+          <article class="card">
+            <img class="info" src="info.svg" alt="" aria-hidden="true" />
+            <div class="body">
+              <div class="text">
+                <h3 class="text-wrapper">Proximity Sensors</h3>
+                <p class="body-text-for">
+                  To save energy, proximity sensors can be used to gradually light up and dim sections of the graffiti
+                  depending on movement
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="card">
+            <img class="info" src="info.svg" alt="" aria-hidden="true" />
+            <div class="body">
+              <div class="text">
+                <h3 class="text-wrapper">Local Collaboration</h3>
+                <p class="body-text-for">
+                  Existing graffiti and local graffiti artists can help to inspire the designs of the NightLighting
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+      <img class="IMG" src="graffiti.webp" alt="Graffiti NightLighting example" />
+      <img class="circle" src="circle.svg" alt="" aria-hidden="true" />
+      <div class="linear-determinate" aria-hidden="true">
+        <div class="track-and-stop">
+          <div class="track"><div class="track-2"></div></div>
+          <div class="stop"></div>
         </div>
       </div>
-    </div>
-  </div>
-
-  <div class="slide">
-    <div class="slide-content">
-      <h2 class="slide-title">Slide 2 Title</h2>
-      <p class="slide-subtitle">Slide 2 Subtitle</p>
-      <img class="slide-image" src="image2.jpg" alt="Slide 2 Image">
-      <h3 class="mini-title">Mini Title 2</h3>
-      <p class="mini-subtitle">Mini Subtitle 2</p>
-      <div class="info-boxes">
-        <div class="info-box">
-          <h3>Info Box 1<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 1.</p>
-        </div>
-        <div class="info-box">
-          <h3>Info Box 2<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 2.</p>
-        </div>
-        <div class="info-box">
-          <h3>Info Box 3<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 3.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="slide">
-    <div class="slide-content">
-      <h2 class="slide-title">Slide 3 Title</h2>
-      <p class="slide-subtitle">Slide 3 Subtitle</p>
-      <img class="slide-image" src="image3.jpg" alt="Slide 3 Image">
-      <h3 class="mini-title">Mini Title 3</h3>
-      <p class="mini-subtitle">Mini Subtitle 3</p>
-      <div class="info-boxes">
-        <div class="info-box">
-          <h3>Info Box 1<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 1.</p>
-        </div>
-        <div class="info-box">
-          <h3>Info Box 2<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 2.</p>
-        </div>
-        <div class="info-box">
-          <h3>Info Box 3<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 3.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <a class="prev arrow" onclick="changeSlide(-1)">&#10094;</a>
-  <a class="next arrow" onclick="changeSlide(1)">&#10095;</a>
-
-</div>
-
-<script>
-let slideIndex = 0;
-showSlides();
-
-function changeSlide(n) {
-  showSlides(slideIndex += n);
-}
-
-function showSlides() {
-  let i;
-  let slides = document.getElementsByClassName("slide");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].classList.remove("active");
-  }
-  slideIndex = (slideIndex + slides.length) % slides.length;
-  slides[slideIndex].classList.add("active");
-}
-</script>
-
-</body>
+    </main>
+  </body>
 </html>
