--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -58,7 +58,7 @@
           </article>
         </div>
       </section>
-      <img class="IMG" src="graffiti.webp" alt="Graffiti NightLighting example" />
+      <img class="IMG" src="graffitinightlight.webp" alt="Graffiti NightLighting example" />
       <img class="circle" src="circle.svg" alt="" aria-hidden="true" />
       <div class="linear-determinate" aria-hidden="true">
         <div class="track-and-stop">
